# Nbody_streams

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  nbody_cuda_kernels.py  nbody_fields.py  nbody_fields_gpu.py  nbody_io.py  requirements.txt  run_nbody.py  run_nbody_gpu.py  setup.cfg
docs/: agama_helper.md  coords.md  dynamical_friction.md  fast_sims.md  fields.md  index.md  io.md  main.md  quickstart.md  run.md  tree_gpu.md  utils.md  viz.md
examples/: MW_LMC_evolv.ipynb  MW_gpu_tree_stability.ipynb  dynamical_friction_tutorial.ipynb  plummer_stability.ipynb  plummer_stability_gpu_tree.ipynb  pretty_density_methods.ipynb  run_simulation.ipynb  stream_Nbody.ipynb
graphify-out/: .graphify_python  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json
legacy/: nbody_fields_old.py  nbody_forces_gpu_legacy.py  nbody_io_faulty.py  run_nbody_faulty.py
nbody_streams/: __init__.py  _chandrasekhar.py  cuda_kernels.py  fields.py  io.py  nbody_io.py  run.py  sim.py  species.py
nbody_streams/agama_helper/: README.md  __init__.py  _analytic_potentials.py  _coefs.py  _cylspl_potential_kernel.cu  _fire.py  _fit.py  _io.py  _load.py  _multipole_potential_kernel.cu  _potential.py  tech_err.md
nbody_streams/agama_helper/tests/: 100.LMC.none_8.coef_mult  600.bar.none_8.coef_cylsp_DR  600.dark.none_8.coef_mul_DR  test_load_paths.py  test_phase1_multipole.py  test_phase2_analytic.py  test_phase3_cylspline.py  test_zero_pruning.py
nbody_streams/coords/: __init__.py  streams.py  transforms.py
nbody_streams/data/: example_nbody_dm_stream.npz
nbody_streams/data/potentials/: McMillan17.ini
nbody_streams/data/potentials/MW_LMC_evolv/: LMC_vasiliev21.ini  accMW_McM17streams  trajLMC_McM17streams  trajLMC_approx
nbody_streams/fast_sims/: __init__.py  _common.py  restricted.py  spray.py
nbody_streams/tree_gpu/: ACCURACY_NOTES.md  Makefile  Particle4.h  Treecode.h  __init__.py  _build.py  _force.py  buildTree.cu  computeForces.cu  computeMultipoles.cu  cuda_primitives.h  cudamem.h  makeGroups.cu  run_gpu_tree.py  treeGPU_interface.cu
nbody_streams/tree_gpu/tests/: test_accuracy.py  test_active_flags.py  test_api.py  test_compare.py  test_comprehensive.py  test_timing.py  test_tree.py
nbody_streams/utils/: __init__.py  _validation.py  main.py
nbody_streams/viz/: __init__.py  plots.py  sph_kernels.py
tests/: test_advanced.py  test_basic.py  test_chandrasekhar.py  test_coords.py  test_fast_sims.py  test_forces_versus_cpu.py  test_multi_species.py  test_newtons_third_law.py  test_physics.py  test_utils.py  test_viz.py
