[metadata]
name = nbody_streams
version = 1.2.0
author = Arpit Arora
author_email = arora125@sas.upenn.edu
description = Direct N-body utilities and a lightweight integrator (CPU + optional GPU)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/appy2806/Nbody_streams
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy
    h5py
    scipy
    numba
    matplotlib

[options.extras_require]
agama =
    agama @ git+https://github.com/GalacticDynamics-Oxford/Agama.git
falcon =
    pyfalcon @ git+https://github.com/GalacticDynamics-Oxford/pyfalcon.git
healpy =
    healpy
all =
    agama @ git+https://github.com/GalacticDynamics-Oxford/Agama.git
    pyfalcon @ git+https://github.com/GalacticDynamics-Oxford/pyfalcon.git
    healpy

[options.package_data]
nbody_streams = 
	data/*
	data/*/*
	data/*/*/*

[options.entry_points]
console_scripts =
    nbody-run = nbody_streams.run:main
