[metadata]
name = nbody_streams
version = 2.0.0
author = Arpit Arora
author_email = arora125@sas.upenn.edu
description = Direct N-body simulator: GPU/CPU direct-sum + GPU/CPU tree-code, multi-species
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/appy2806/Nbody_streams
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy
    h5py
    scipy
    numba
    matplotlib

[options.extras_require]
agama =
    agama @ git+https://github.com/GalacticDynamics-Oxford/Agama.git
falcon =
    pyfalcon @ git+https://github.com/GalacticDynamics-Oxford/pyfalcon.git
healpy =
    healpy
gpu =
    cupy-cuda12x
all =
    agama @ git+https://github.com/GalacticDynamics-Oxford/Agama.git
    pyfalcon @ git+https://github.com/GalacticDynamics-Oxford/pyfalcon.git
    healpy
    cupy-cuda12x

[options.package_data]
nbody_streams =
	data/*
	data/*/*
	data/*/*/*
	tree_gpu/*.cu
	tree_gpu/*.h
	tree_gpu/Makefile
	tree_gpu/libtreeGPU.so

[options.entry_points]
console_scripts =
    nbody-run = nbody_streams.run:main
    nbody-build-tree = nbody_streams.tree_gpu._build:main
