[metadata]
name = nbody_streams
version = 2.1.0
author = Arpit Arora
author_email = arora125@sas.upenn.edu
description = Direct N-body simulator: GPU/CPU direct-sum + GPU/CPU tree-code, multi-species
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/appy2806/Nbody_streams
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: C
    Programming Language :: C++
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

# ─────────────────────────────────────────────────────────────────────────────
# HARDWARE & PLATFORM NOTES
# ─────────────────────────────────────────────────────────────────────────────
# This package contains code written in Python, C, C++, and CUDA.
#
# CPU backends (always available):
#   - Pure Python / NumPy direct-sum integrator
#   - Numba-JIT CPU kernels (cross-platform: Linux, macOS, Windows)
#
# GPU backends — two separate subsystems with different hardware support:
#
#   1. CuPy direct-sum kernels:
#      - NVIDIA GPUs via CUDA 12.x  (cupy-cuda12x)
#      - AMD GPUs via ROCm >= 9.0   (cupy-rocm-*; install manually)
#
#   2. CUDA C/C++ tree-code kernels (tree_gpu/*.cu):
#      - Ships as source only; no pre-built binaries included.
#      - NVIDIA: compile with nvcc (CUDA 12+) + gcc/g++:
#          cd nbody_streams/tree_gpu && make
#      - AMD: not directly runnable, but the source can be ported to ROCm
#          using the hipify tool, which auto-translates most CUDA runtime API
#          calls to HIP equivalents. Some manual work may still be needed for
#          CUDA-specific intrinsics, PTX inline assembly, or CUDA library calls
#          (e.g. cuFFT -> rocFFT). See: https://github.com/ROCm/HIPIFY
# ─────────────────────────────────────────────────────────────────────────────

[options]
packages = find:
include_package_data = True

# Python >= 3.8; upper cap at <3.13 because numba & cupy lag new CPython releases
python_requires = >=3.8, <3.13

install_requires =
    # Core numerical / I/O stack — CPU-only, fully cross-platform
    numpy>=1.21
    h5py>=3.0
    scipy>=1.7
    matplotlib>=3.4
    # Numba JIT compiler — CPU kernels work everywhere;
    # CUDA kernels (@cuda.jit) require an NVIDIA GPU + CUDA toolkit
    numba>=0.57

[options.extras_require]

# ── GPU support ───────────────────────────────────────────────────────────────
# CuPy supports both NVIDIA (CUDA) and AMD (ROCm >= 9.0).
# Install only ONE wheel matching your hardware:
#
#   NVIDIA CUDA 12.x  ->  pip install "nbody_streams[cuda]"   (cupy-cuda12x)
#   NVIDIA CUDA 11.x  ->  pip install cupy-cuda11x manually   (legacy)
#   AMD ROCm          ->  pip install cupy-rocm-5-0 manually  (check your ROCm version)
#
# NOTE — CuPy vs CUDA C kernels:
#   CuPy works on both NVIDIA and AMD for the direct-sum backend.
#   The tree-code kernels (tree_gpu/*.cu) are CUDA C/C++ source; they require
#   nvcc to compile and run natively only on NVIDIA. AMD users can port them
#   via hipify (see hardware notes above).
cuda =
    cupy-cuda12x>=13.0

# ── Optional external integrators ────────────────────────────────────────────
# Agama: action-based galaxy modelling library (CPU; Linux/macOS)
agama =
    agama @ git+https://github.com/GalacticDynamics-Oxford/Agama.git

# pyfalcon: fast approximate N-body (falcON algorithm; CPU; Linux/macOS)
falcon =
    pyfalcon @ git+https://github.com/GalacticDynamics-Oxford/pyfalcon.git

# healpy: HEALPix sky pixelisation (CPU; Linux/macOS; optional analysis tool)
healpy =
    healpy>=1.16

# ── Full install (NVIDIA GPU system) ─────────────────────────────────────────
all =
    cupy-cuda12x>=13.0
    agama @ git+https://github.com/GalacticDynamics-Oxford/Agama.git
    pyfalcon @ git+https://github.com/GalacticDynamics-Oxford/pyfalcon.git
    healpy>=1.16

# ── CPU-only convenience bundle (no GPU required) ────────────────────────────
cpu =
    agama @ git+https://github.com/GalacticDynamics-Oxford/Agama.git
    pyfalcon @ git+https://github.com/GalacticDynamics-Oxford/pyfalcon.git
    healpy>=1.16

[options.package_data]
nbody_streams =
    # Static data files
    data/*
    data/*/*
    data/*/*/*
    # CUDA / C++ tree-code sources — shipped as source only, no pre-built binaries.
    # NVIDIA: compile with nvcc + make (see hardware notes above).
    # AMD: use hipify to port to ROCm before compiling. See: https://github.com/ROCm/HIPIFY
    tree_gpu/*.cu
    tree_gpu/*.cpp
    tree_gpu/*.h
    tree_gpu/Makefile

[options.entry_points]
console_scripts =
    # Main simulation runner (CPU always available; GPU features need [cuda] extras)
    nbody-run = nbody_streams.run:main
    # Compile the CUDA tree-code kernel (requires nvcc + CUDA 12 on NVIDIA hardware)
    nbody-build-tree = nbody_streams.tree_gpu._build:main
